--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "country-list": "^2.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.4.1",
     "react-use": "^17.6.0"
   },
   "devDependencies": {
