--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.1",
+    "react-spinners": "^0.15.0",
     "react-top-loading-bar": "^3.0.2",
     "react-use": "^17.6.0"
   },
