--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "country-list": "^2.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.1",
     "react-spinners": "^0.15.0",
     "react-top-loading-bar": "^3.0.2",
